Feat: add more methods in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=hibernate-jpa
 spring.datasource.url= jdbc:postgresql://localhost:5432/hibernate
 spring.datasource.username=postgres
 spring.datasource.password=748596123
-
+spring.jpa.hibernate.ddl-auto=create
 
 #remove Spring Banner Log
 spring.main.banner-mode=off
